Added animation and restructured directories